change resolution dynamically on mobile, tween.js ios8 fix added

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ body {
     color: #ffffff;
 }
 
+.en-alt {
+    color: #bdbdbd;
+}
+
 .fr {
-    color: #bebec0;
+    color: #888888;
 }
 
 #panel-wrapper {
@@ -115,58 +119,16 @@ body {
 }
 
 .panel-top {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 22px;
     text-transform: uppercase;
     padding: 20px;
     opacity: 0;
 }
 
-.years-text {
-    font-size: 90px;
-    letter-spacing: -12px;
-    color: white;
-    text-align: center;
-    padding: 72px 0;
-}
-
-.years-text span {
-    opacity: 0;
-}
-
-.social {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-}
-
-.social img {
-    height: 20px;
-    margin-left: 5px;
-}
-
-.panel-bottom {
-    opacity: 0;
-}
-
-.new-year-text {
-    display: inline-block;
-    width: 188px;
-    font-size: 18px;
-    line-height: 20px;
-    text-transform: uppercase;
-    padding: 0 0 20px 20px;
-}
-
-.logo-small {
-    width: 120px;
-    float: right;
-    margin: 28px 20px;
-}
-
 .confetti {
     position: absolute;
-    width: 400px;
+    width: 480px;
     left: 50%;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%); /* IE 9 */
@@ -176,50 +138,103 @@ body {
     opacity: 0;
 }
 
+.years-text {
+    font-size: 90px;
+    letter-spacing: -12px;
+    color: white;
+    text-align: center;
+    padding: 60px 0;
+    margin-left: -12px;
+}
+
+.years-text span {
+    opacity: 0;
+}
+
+.years-subtitle {
+    text-align: center;
+    position: relative;
+    top: -68px;
+    font-size: 16px;
+    text-transform: uppercase;
+    opacity: 0;
+}
+
+.social {
+    float: right;
+}
+
+.social img {
+    height: 20px;
+    margin-left: 5px;
+}
+
+.panel-bottom {
+    top: 36px;
+    position: relative;
+    padding: 0 24px;
+    opacity: 0;
+}
+
+.logo-small {
+    width: 120px;
+    float: left;
+}
+
+.locations {
+    display: inline-block;
+    font-size: 10px;
+    line-height: 16px;
+    text-transform: uppercase;
+    padding: 0 20px;
+    margin-top: -4px;
+}
+
 @media (max-width: 600px) {
    .panel {
         width: 100%;
-        height: 312px;
+        height: 270px;
    }
 
-   .years-text {
-        font-size: 60px;
-        letter-spacing: -10px;
-    }
-
     .panel-top {
-        font-size: 14px;
+        font-size: 12px;
         line-height: 16px;
         padding: 10px 0 0 10px;
     }
 
-    .new-year-text {
-        width: 110px;
+    .confetti {
+        /*display: none !important;*/
+        width: 320px;
+    }
+
+    .years-text {
+        font-size: 60px;
+        letter-spacing: -10px;
+        padding: 50px 0;
+    }
+
+    .years-subtitle {
         font-size: 12px;
-        line-height: 14px;
-        padding: 0 0 0 10px;
+        top: -56px;
+    }
+
+    .panel-bottom {
+        top: 10px;
+        padding: 0 10px;
+    }
+
+    .logo-small {
+        width: 70px;
+    }
+
+    .locations {
+        font-size: 7px;
+        line-height: 10px;
     }
 
     .social {
         /* remove cause it's too tiny to click anyway */
         display: none;
-
-        /* in case we want to bring it back */
-        right: 10px;
-        top: 10px;
-    }
-
-    .social img {
-        height: 16px;
-    }
-
-    .confetti {
-        width: 320px;
-    }
-
-    .logo-small {
-        margin: 24px 8px 0 0;
-        width: 70px;
     }
 }
 
@@ -230,40 +245,43 @@ body {
         height: 600px;
    }
 
-   .years-text {
-        font-size: 128px;
-        letter-spacing: -20px;
-        padding: 118px 0;
-    }
-
     .panel-top {
-        font-size: 28px;
-        line-height: 30px;
-    }
-
-    .panel-bottom {
-        font-size: 28px;
-        line-height: 30px;
-    }
-
-    .new-year-text {
-        width: 252px;
-        font-size: 26px;
-        line-height: 28px;
-    }
-
-    .social img {
-        height: 24px;
-        margin-left: 10px;
+        font-size: 24px;
+        line-height: 33px;
+        padding: 22px;
     }
 
     .confetti {
-        width: 600px;
+        width: 720px;
+    }
+
+    .years-text {
+        font-size: 128px;
+        letter-spacing: -20px;
+        padding: 102px 0;
+    }
+
+    .years-subtitle {
+        top: -112px;
+        font-size: 22px;
+    }
+
+    .panel-bottom {
+        top: 36px;
+        padding: 0 36px;
     }
 
     .logo-small {
         width: 160px;
-        float: right;
-        margin: 40px 32px;
+    }
+
+    .locations {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .social img {
+        height: 30px;
+        margin-left: 10px;
     }
 }
